# mcp-tools

./: .checkmake  .codecov.yml  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.smithery  LICENSE  Makefile  PLAN.md  QUICKSTART.md  README.md  SECURITY.md  TODO_LIST_FEATURE_PLAN.md  chatmcp  claude-context  mcp-tools  mcp-toolz  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-pip.txt  requirements.in  requirements.txt  server.json  smithery.yaml  test_mcp_server.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  scorecard.yml  trivy.yml
config/: mcp_config.json.example
src/: __init__.py  models.py
src/context_manager/: __init__.py  __main__.py  anthropic_client.py  cli.py  deepseek_client.py  gemini_client.py  openai_client.py  storage.py
src/mcp_server/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_anthropic_client.py  test_cli.py  test_deepseek_client.py  test_gemini_client.py  test_main.py  test_mcp_server.py  test_openai_client.py  test_storage.py  test_storage_fuzz.py
