[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-context"
version = "0.1.0"
description = "Claude Code ↔ ChatGPT context sharing via MCP"
requires-python = ">=3.13"

[tool.black]
line-length = 140
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 140

[tool.ruff]
line-length = 140
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLW", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "src.context_manager.cli"
disallow_untyped_decorators = false

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]  # Ignore missing docstrings in modules and packages

[tool.vulture]
exclude = ["venv/", "build/"]
min_confidence = 80
